[package]
name = "sdf_parser"
version = "0.1.0"
authors = ["Kyle McCarthy <km@kylemccarthy.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "6.1", features = ["regex"] }
thiserror = "1.0"
anyhow = "1.0"
regex = "1"
lazy_static = "1.4.0"
