[package]
name = "sdf_parser"
version = "0.1.0"
authors = ["Kyle McCarthy <km@kylemccarthy.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
nom = { version = "6.1", features = ["regex"] }
thiserror = "1.0"
anyhow = "1.0"
regex = "1"
lazy_static = "1.4.0"
memmap = "0.7.0"
bstr = "0.2.14"
flate2 = { version = "1.0", features = ["zlib-ng-compat"], default-features = false }
rayon = "1.5.0"
itertools = "0.10"
lexical = "5.2.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15.3"

[dev-dependencies]
criterion = "0.3.4"
